@@ -5,6 +5,10 @@ import static org.junit.jupiter.api.Assertions.*;
 import java.util.Arrays;
 import java.util.List;
 
+/**
+ * Pruebas unitarias para las clases principales del sistema de batalla Pokémon:
+ * {@code Pokemon}, {@code Trainer}, {@code Battle}, {@code Move}, {@code Item}, {@code Team}, {@code Action}, y estrategias de IA.
+ */
 class PokemonBattleTest {
     private Pokemon pikachu;
     private Pokemon charmander;
@@ -14,6 +18,9 @@ class PokemonBattleTest {
     private CPUTrainer cpuTrainer;
     private Battle cpuBattle;
 
+    /**
+     * Configura el entorno antes de cada prueba.
+     */
     @BeforeEach
     void setUp() {
         Move thunderbolt = MoveDatabase.getMove("THUNDERBOLT");
@@ -37,55 +44,69 @@ class PokemonBattleTest {
 
         battle = new Battle(ash, gary);
 
-        // Configuración para pruebas de CPU
         cpuTrainer = new CPUTrainer("CPU", "Verde");
         cpuTrainer.addPokemonToTeam(pikachu.clone());
         cpuTrainer.setActivePokemon(0);
         cpuBattle = new Battle(ash, cpuTrainer);
     }
 
-    // --- Pruebas para Pokemon ---
+    /**
+     * Verifica que un Pokémon reciba daño correctamente.
+     */
     @Test
     void pokemonShouldTakeDamageWhenAttacked() {
         int initialHP = pikachu.getHp();
         pikachu.takeDamage(20);
-        assertEquals(initialHP - 20, pikachu.getHp(), "El Pokémon debería recibir daño correctamente");
+        assertEquals(initialHP - 20, pikachu.getHp());
     }
 
+    /**
+     * Verifica que el HP de un Pokémon no sea negativo.
+     */
     @Test
     void pokemonShouldNotHaveNegativeHP() {
         pikachu.takeDamage(200);
-        assertEquals(0, pikachu.getHp(), "El HP no debería ser negativo");
+        assertEquals(0, pikachu.getHp());
     }
 
+    /**
+     * Verifica que un Pokémon pueda curarse hasta su HP máximo.
+     */
     @Test
     void pokemonShouldHealUpToMaxHP() {
         pikachu.takeDamage(50);
         pikachu.heal(30);
-        assertEquals(80, pikachu.getHp(), "El Pokémon debería curarse correctamente");
+        assertEquals(80, pikachu.getHp());
 
         pikachu.heal(100);
-        assertEquals(pikachu.getMaxHp(), pikachu.getHp(), "El Pokémon no debería curarse más allá de su HP máximo");
+        assertEquals(pikachu.getMaxHp(), pikachu.getHp());
     }
 
+    /**
+     * Verifica que un Pokémon pueda revivir si está debilitado.
+     */
     @Test
     void pokemonShouldReviveWhenFainted() {
         pikachu.takeDamage(pikachu.getHp());
-        assertEquals(0, pikachu.getHp());
         pikachu.revive(50);
-        assertTrue(pikachu.getHp() > 0, "El Pokémon debería revivir con algo de HP");
+        assertTrue(pikachu.getHp() > 0);
     }
 
+    /**
+     * Verifica que un Pokémon debilitado no pueda atacar.
+     */
     @Test
     void pokemonShouldNotAttackWhenFainted() {
         Pokemon faintedPikachu = pikachu.clone();
         faintedPikachu.takeDamage(faintedPikachu.getHp());
         int initialHP = charmander.getHp();
         faintedPikachu.attack(0, charmander);
-        assertEquals(initialHP, charmander.getHp(), "Un Pokémon debilitado no debería poder atacar");
+        assertEquals(initialHP, charmander.getHp());
     }
 
-    // ------ para Trainer ----
+    /**
+     * Verifica que un entrenador pueda cambiar a un Pokémon saludable.
+     */
     @Test
     void trainerShouldBeAbleToSwitchPokemon() {
         Pokemon squirtle = new Pokemon("Squirtle", "WATER", 100, 48, 65, 50, 64, 43, 100, 100,
@@ -93,9 +114,12 @@ class PokemonBattleTest {
         ash.addPokemonToTeam(squirtle);
 
         ash.switchPokemon(1);
-        assertEquals(squirtle, ash.getActivePokemon(), "El entrenador debería poder cambiar de Pokémon");
+        assertEquals(squirtle, ash.getActivePokemon());
     }
 
+    /**
+     * Verifica que no se pueda cambiar a un Pokémon debilitado.
+     */
     @Test
     void trainerShouldNotSwitchToFaintedPokemon() {
         Pokemon squirtle = new Pokemon("Squirtle", "WATER", 100, 48, 65, 50, 64, 43, 100, 100,
@@ -104,188 +128,221 @@ class PokemonBattleTest {
         ash.addPokemonToTeam(squirtle);
 
         ash.switchPokemon(1);
-        assertNotEquals(squirtle, ash.getActivePokemon(), "No debería cambiar a un Pokémon debilitado");
+        assertNotEquals(squirtle, ash.getActivePokemon());
     }
 
+    /**
+     * Verifica el uso correcto de ítems por parte del entrenador.
+     */
     @Test
     void trainerShouldUseItemsCorrectly() {
         ash.getItems().add(new Potion());
         int initialHP = pikachu.getHp();
         pikachu.takeDamage(30);
-
         ash.useItem(0, 0);
-        assertTrue(pikachu.getHp() > initialHP - 30, "El ítem debería curar al Pokémon");
+        assertTrue(pikachu.getHp() > initialHP - 30);
     }
 
+    /**
+     * Verifica que Revive no afecte a un Pokémon saludable.
+     */
     @Test
     void trainerShouldNotUseReviveOnHealthyPokemon() {
         ash.getItems().add(new Revive());
         int initialHP = pikachu.getHp();
         ash.useItem(0, 0);
-        assertEquals(initialHP, pikachu.getHp(), "Revive no debería afectar a un Pokémon saludable");
+        assertEquals(initialHP, pikachu.getHp());
     }
 
-    // ----- Pruebas para Battle -------
+    /**
+     * Verifica que el primer turno de la batalla sea del jugador 1.
+     */
     @Test
     void battleShouldStartWithPlayer1Turn() {
-        assertEquals(ash, battle.getCurrentPlayer(), "El primer turno debería ser del jugador 1");
+        assertEquals(ash, battle.getCurrentPlayer());
     }
 
-
-
-
-
+    /**
+     * Verifica que se apliquen correctamente los efectos del clima.
+     */
     @Test
     void battleShouldApplyClimateEffects() {
         Battle.setClimate("RAIN", 5);
-        assertEquals("RAIN", Battle.getClimate(), "El clima debería aplicarse correctamente");
+        assertEquals("RAIN", Battle.getClimate());
     }
 
+    /**
+     * Verifica que el clima expire después de los turnos especificados.
+     */
     @Test
     void climateShouldExpireAfterTurns() {
         Battle.setClimate("SUNNY", 2);
         battle.performAction(Action.createAttack(0));
         battle.performAction(Action.createAttack(0));
-        assertNull(Battle.getClimate(), "El clima debería desaparecer después de los turnos especificados");
+        assertNull(Battle.getClimate());
     }
 
-    // ------- para CPUTrainer y Estrategias -----
-
-
+    /**
+     * Verifica que la CPU pueda adoptar una estrategia defensiva.
+     */
     @Test
     void cpuTrainerShouldSwitchToDefensiveStrategyWhenSet() {
         cpuTrainer.setStrategy(new DefensiveStrategy());
-        assertTrue(cpuTrainer.decideAction(cpuBattle) != null, "La CPU debería poder usar estrategia defensiva");
+        assertNotNull(cpuTrainer.decideAction(cpuBattle));
     }
 
-
-
+    /**
+     * Verifica que la estrategia defensiva prefiera movimientos defensivos.
+     */
     @Test
     void defensiveStrategyShouldPreferDefensiveMoves() {
         DefensiveStrategy strategy = new DefensiveStrategy();
         Pokemon attacker = pikachu.clone();
         attacker.getMoves().add(MoveDatabase.getMove("PROTECT"));
-
         Action action = strategy.decideAction(cpuTrainer, cpuBattle);
-        assertNotNull(action, "La estrategia defensiva debería decidir una acción");
+        assertNotNull(action);
     }
 
-    // -----para Movimientos ---
+    /**
+     * Verifica que los movimientos físicos calculen daño según el ataque.
+     */
     @Test
     void physicalMoveShouldCalculateDamageBasedOnAttack() {
         PhysicalMove move = (PhysicalMove) MoveDatabase.getMove("AERIAL ACE");
-        Pokemon attacker = new Pokemon("Test", "NORMAL", 100, 100, 50, 50, 50, 50, 100, 100,
-                Arrays.asList(move));
-        Pokemon defender = new Pokemon("Test", "NORMAL", 100, 50, 50, 50, 50, 50, 100, 100,
-                Arrays.asList(move));
-
+        Pokemon attacker = new Pokemon("Test", "NORMAL", 100, 100, 50, 50, 50, 50, 100, 100, List.of(move));
+        Pokemon defender = new Pokemon("Test", "NORMAL", 100, 50, 50, 50, 50, 50, 100, 100, List.of(move));
         int initialHP = defender.getHp();
         move.use(attacker, defender);
-        assertTrue(defender.getHp() < initialHP, "El movimiento físico debería causar daño basado en el ataque");
+        assertTrue(defender.getHp() < initialHP);
     }
 
+    /**
+     * Verifica que los movimientos especiales usen el ataque especial para calcular daño.
+     */
     @Test
     void specialMoveShouldCalculateDamageBasedOnSpecialAttack() {
         SpecialMove move = (SpecialMove) MoveDatabase.getMove("FLAMETHROWER");
-        Pokemon attacker = new Pokemon("Test", "FIRE", 100, 50, 50, 100, 50, 50, 100, 100,
-                Arrays.asList(move));
-        Pokemon defender = new Pokemon("Test", "NORMAL", 100, 50, 50, 50, 50, 50, 100, 100,
-                Arrays.asList(move));
-
+        Pokemon attacker = new Pokemon("Test", "FIRE", 100, 50, 50, 100, 50, 50, 100, 100, List.of(move));
+        Pokemon defender = new Pokemon("Test", "NORMAL", 100, 50, 50, 50, 50, 50, 100, 100, List.of(move));
         int initialHP = defender.getHp();
         move.use(attacker, defender);
-        assertTrue(defender.getHp() < initialHP, "El movimiento especial debería causar daño basado en el ataque especial");
+        assertTrue(defender.getHp() < initialHP);
     }
 
+    /**
+     * Verifica que los movimientos respeten la precisión.
+     */
     @Test
     void moveShouldRespectAccuracy() {
-        Move move = MoveDatabase.getMove("THUNDERBOLT");
+        SpecialMove inaccurateMove = new SpecialMove("TEST", "ELECTRIC", 90, 0, 10, 0);
         Pokemon attacker = pikachu.clone();
         Pokemon defender = charmander.clone();
-
-
-        SpecialMove inaccurateMove = new SpecialMove("TEST", "ELECTRIC", 90, 0, 10, 0);
         attacker.getMoves().set(0, inaccurateMove);
-
         int initialHP = defender.getHp();
         inaccurateMove.use(attacker, defender);
-        assertEquals(initialHP, defender.getHp(), "El movimiento debería fallar si la precisión es 0");
+        assertEquals(initialHP, defender.getHp());
     }
 
+    /**
+     * Verifica que los movimientos consuman PP al usarse.
+     */
     @Test
     void moveShouldDecreasePPWhenUsed() {
         Move move = MoveDatabase.getMove("THUNDERBOLT");
         int initialPP = move.pp();
         move.use(pikachu, charmander);
-        assertEquals(initialPP - 1, move.pp(), "El PP debería disminuir después de usar un movimiento");
+        assertEquals(initialPP - 1, move.pp());
     }
 
-    //  -- para la clase Action ---
+    /**
+     * Verifica que se cree una acción de tipo ataque correctamente.
+     */
     @Test
     void actionShouldCreateAttackTypeCorrectly() {
         Action action = Action.createAttack(0);
-        assertEquals(Action.Type.ATTACK, action.getType(), "Debería crear una acción de tipo ATAQUE");
-        assertEquals(0, action.getMoveIndex(), "El índice del movimiento debería ser 0");
+        assertEquals(Action.Type.ATTACK, action.getType());
+        assertEquals(0, action.getMoveIndex());
     }
 
+    /**
+     * Verifica que se cree una acción para usar ítem correctamente.
+     */
     @Test
     void actionShouldCreateUseItemTypeCorrectly() {
         Action action = Action.createUseItem(1, 0);
-        assertEquals(Action.Type.USE_ITEM, action.getType(), "Debería crear una acción de tipo USAR_ITEM");
-        assertEquals(1, action.getItemIndex(), "El índice del ítem debería ser 1");
-        assertEquals(0, action.getTargetIndex(), "El índice del objetivo debería ser 0");
+        assertEquals(Action.Type.USE_ITEM, action.getType());
+        assertEquals(1, action.getItemIndex());
+        assertEquals(0, action.getTargetIndex());
     }
 
+    /**
+     * Verifica que se cree una acción de cambio de Pokémon correctamente.
+     */
     @Test
     void actionShouldCreateSwitchPokemonTypeCorrectly() {
         Action action = Action.createSwitchPokemon(2);
-        assertEquals(Action.Type.SWITCH_POKEMON, action.getType(), "Debería crear una acción de tipo CAMBIAR_POKEMON");
-        assertEquals(2, action.getTargetIndex(), "El índice del Pokémon objetivo debería ser 2");
+        assertEquals(Action.Type.SWITCH_POKEMON, action.getType());
+        assertEquals(2, action.getTargetIndex());
     }
 
+    /**
+     * Verifica que no se permita un índice negativo de movimiento.
+     */
     @Test
     void actionShouldNotAllowNegativeMoveIndex() {
-        assertThrows(IllegalArgumentException.class, () -> Action.createAttack(-2),
-                "No debería permitir índices de movimiento negativos");
+        assertThrows(IllegalArgumentException.class, () -> Action.createAttack(-2));
     }
 
-    // ---para item y subclases---
+    /**
+     * Verifica que una poción cure al Pokémon sin exceder el máximo.
+     */
     @Test
     void potionShouldHealPokemonButNotExceedMaxHP() {
         Potion potion = new Potion();
         Pokemon pokemon = new Pokemon("Test", "NORMAL", 100, 50, 50, 50, 50, 50, 100, 100, List.of());
         pokemon.takeDamage(30);
         potion.use(pokemon);
-        assertEquals(90, pokemon.getHp(), "La poción debería curar 20 puntos de HP");
+        assertEquals(90, pokemon.getHp());
     }
 
+    /**
+     * Verifica que una HyperPotion cure más que una Potion normal.
+     */
     @Test
     void hyperPotionShouldHealMoreThanPotion() {
         HyperPotion hyperPotion = new HyperPotion();
         Pokemon pokemon = new Pokemon("Test", "NORMAL", 200, 50, 50, 50, 50, 50, 100, 100, List.of());
         pokemon.takeDamage(100);
         hyperPotion.use(pokemon);
-        assertTrue(pokemon.getHp() > 100, "La HyperPotion debería curar más que una Potion normal");
+        assertTrue(pokemon.getHp() > 100);
     }
 
+    /**
+     * Verifica que Revive no afecte a un Pokémon saludable.
+     */
     @Test
     void reviveShouldNotWorkOnHealthyPokemon() {
         Revive revive = new Revive();
         Pokemon healthyPokemon = new Pokemon("Test", "NORMAL", 100, 50, 50, 50, 50, 50, 100, 100, List.of());
         revive.use(healthyPokemon);
-        assertEquals(100, healthyPokemon.getHp(), "Revive no debería afectar a un Pokémon con HP");
+        assertEquals(100, healthyPokemon.getHp());
     }
 
+    /**
+     * Verifica que Revive restaure la mitad del HP a un Pokémon debilitado.
+     */
     @Test
     void reviveShouldRestoreHalfHPToFaintedPokemon() {
         Revive revive = new Revive();
         Pokemon faintedPokemon = new Pokemon("Test", "NORMAL", 100, 50, 50, 50, 50, 50, 100, 100, List.of());
         faintedPokemon.takeDamage(100);
         revive.use(faintedPokemon);
-        assertEquals(50, faintedPokemon.getHp(), "Revive debería restaurar la mitad del HP máximo");
+        assertEquals(50, faintedPokemon.getHp());
     }
 
-    // --- para team ---
+    /**
+     * Verifica que el equipo encuentre un Pokémon sano que no sea el activo.
+     */
     @Test
     void teamShouldFindHealthyPokemonExcludingActive() {
         Team team = new Team();
@@ -294,9 +351,12 @@ class PokemonBattleTest {
         team.addPokemon(active);
         team.addPokemon(healthy);
         team.setActivePokemon(0);
-        assertEquals(1, team.findHealthyPokemon(), "Debería encontrar el Pokémon sano en el índice 1");
+        assertEquals(1, team.findHealthyPokemon());
     }
 
+    /**
+     * Verifica que no se encuentre ningún Pokémon sano si todos están debilitados.
+     */
     @Test
     void teamShouldNotFindHealthyPokemonIfAllFainted() {
         Team team = new Team();
@@ -306,18 +366,24 @@ class PokemonBattleTest {
         fainted2.takeDamage(100);
         team.addPokemon(fainted1);
         team.addPokemon(fainted2);
-        assertEquals(-1, team.findHealthyPokemon(), "No debería encontrar Pokémon sanos");
+        assertEquals(-1, team.findHealthyPokemon());
     }
 
+    /**
+     * Verifica que se detecte correctamente cuando todos los Pokémon del equipo están debilitados.
+     */
     @Test
     void teamShouldDetectAllFaintedPokemon() {
         Team team = new Team();
         Pokemon fainted = new Pokemon("Fainted", "NORMAL", 100, 50, 50, 50, 50, 50, 100, 100, List.of());
         fainted.takeDamage(100);
         team.addPokemon(fainted);
-        assertTrue(team.isAllFainted(), "Debería detectar que todos los Pokémon están debilitados");
+        assertTrue(team.isAllFainted());
     }
 
+    /**
+     * Verifica que no se pueda cambiar al Pokémon activo si está debilitado.
+     */
     @Test
     void teamShouldNotAllowSwitchingToFaintedPokemon() {
         Team team = new Team();
@@ -327,7 +393,6 @@ class PokemonBattleTest {
         team.addPokemon(active);
         team.addPokemon(fainted);
         team.switchPokemon(1);
-        assertNotEquals(fainted, team.getActivePokemon(), "No debería cambiar a un Pokémon debilitado");
+        assertNotEquals(fainted, team.getActivePokemon());
     }
-
 }
